Make builds frail
Failing on warnings.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "lint": "remark cs/*.md",
+    "lint": "remark cs/*.md -f",
     "fix": "remark cs/*.md -o"
   },
   "dependencies": {
