--- a/.remarkrc
+++ b/.remarkrc
@@ -1,12 +1,24 @@
 {
     "plugins": [
-        "remark-preset-lint-recommended",
+        "remark-lint-file-extension",
         "remark-preset-lint-consistent",
-        "remark-preset-lint-markdown-style-guide",
-        [
-            "remark-lint-heading-style",
-            "setext"
-        ],
+        "remark-validate-links",
+        "lint-no-empty-sections",
+        "remark-lint-no-html",
+        "remark-lint-no-empty-url",
+        "remark-lint-no-dead-urls",
+        "remark-lint-code",
+        "remark-lint-final-newline",
+        "remark-lint-heading-increment",
+        "remark-lint-no-duplicate-definitions",
+        "remark-lint-no-duplicate-headings",
+        "remark-lint-no-file-name-mixed-case",
+        "remark-lint-no-file-name-outer-dashes",
+        "remark-lint-no-heading-like-paragraph",
+        "remark-lint-no-table-indentation",
+        "remark-lint-no-tabs",
+        "remark-lint-table-pipes",
+        "remark-lint-definition-spacing",
         [
             "remark-lint-list-item-indent",
             "tab-size"
