--- a/package.json
+++ b/package.json
@@ -1,9 +1,26 @@
 {
     "dependencies": {
         "remark-cli": "^4.0.0",
+        "remark-lint": "^6.0.1",
+        "remark-lint-code": "^2.0.0",
+        "remark-lint-final-newline": "^1.0.1",
+        "remark-lint-heading-increment": "^1.0.1",
+        "remark-lint-no-dead-urls": "^0.3.0",
+        "remark-lint-no-duplicate-definitions": "^1.0.1",
+        "remark-lint-no-duplicate-headings": "^1.0.1",
+        "remark-lint-no-empty-sections": "^2.0.0",
+        "remark-lint-no-empty-url": "^1.0.2",
+        "remark-lint-no-file-name-mixed-case": "^1.0.1",
+        "remark-lint-no-file-name-outer-dashes": "^1.0.2",
+        "remark-lint-no-heading-like-paragraph": "^1.0.1",
+        "remark-lint-no-html": "^1.0.1",
+        "remark-lint-no-table-indentation": "^1.0.1",
+        "remark-lint-no-tabs": "^1.0.1",
+        "remark-lint-table-pipes": "^1.0.1",
         "remark-preset-lint-consistent": "^2.0.1",
         "remark-preset-lint-markdown-style-guide": "^2.1.1",
-        "remark-preset-lint-recommended": "^3.0.1"
+        "remark-preset-lint-recommended": "^3.0.1",
+        "remark-validate-links": "^7.0.0"
     },
     "scripts": {
         "fix": "remark cs/*.md -o",
