Rename bridges config bundle

--- a/configs/bridges/slic3r_config_bundle_bridges.ini
+++ b/configs/bridges/slic3r_config_bundle_bridges.ini
@@ -19,10 +19,10 @@ temperature = 231
 
 [presets]
 filament = ABS ESUN 1.75mm.ini
-print = Normal.ini
+print = Bridges.ini
 printer = RebeliX.ini
 
-[print:Normal]
+[print:Bridges]
 avoid_crossing_perimeters = 0
 bottom_solid_layers = 3
 bridge_acceleration = 0
