Bridges updated for 2022, removed TODOs from printing

--- a/configs/printing/slic3r_config_bundle.ini
+++ b/configs/printing/slic3r_config_bundle.ini
@@ -79,7 +79,7 @@ start_filament_gcode = "; Filament gcode\n"
 temperature = 215
 
 [presets]
-filament = ABS
+filament = PLA
 print = Normal
 printer = Hybrix
 
