End gcode: Let the printer handle it

--- a/configs/printing/slic3r_config_bundle.ini
+++ b/configs/printing/slic3r_config_bundle.ini
@@ -187,7 +187,7 @@ xy_size_compensation = 0
 bed_shape = 0x0,245x0,245x198,0x198
 before_layer_gcode = ;BEFORE_LAYER_CHANGE\nG92 E0.0\n;[layer_z]\n\n
 between_objects_gcode = 
-end_gcode = G4 ; wait\nG1 E-3.0\nM104 S0 ; turn off temperature\nM140 S0 ; turn off heatbed\nM107 ; turn off fan
+end_gcode = M0
 extruder_offset = 0x0
 gcode_flavor = reprap
 has_heatbed = 1
