Switch printing to PET

--- a/configs/printing/slic3r_config_bundle.ini
+++ b/configs/printing/slic3r_config_bundle.ini
@@ -79,7 +79,7 @@ start_filament_gcode = "; Filament gcode\n"
 temperature = 215
 
 [presets]
-filament = PLA
+filament = PET
 print = Normal
 printer = Hybrix
 
